--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -51,3 +51,9 @@ services:
         arguments: [~, BS\CoreBundle\Entity\AppTeam, SonataAdminBundle:CRUD]
         tags:
             - { name: sonata.admin, manager_type: orm, group: secondaire, label: AppTeam }
+
+    app.admin.app_socialnetworking:
+        class: AppBundle\Admin\AppSocialnetworkingAdmin
+        arguments: [~, BS\CoreBundle\Entity\AppSocialnetworking, AppBundle:AppSocialnetworkingAdmin]
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: front, label: AppSocialnetworking }
